[project]
name = "aula-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Michael",email = "michael.mjpr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
